k8s/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tms-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - path: /pages/
        pathType: Prefix
        backend:
          service:
            name: users-service
            port:
              number: 80
      - path: /pages/logout.php
        pathType: Prefix
        backend:
          service:
            name: logout-service
            port:
              number: 80
